feat: complete function integrity, zero-config embedded db fallback and test coverage